test/spec_vectors/simd_boolean/fail/module_7.wat
(module (func (result i32) (i32x4.all_true (i32.const 0))))